fix: Update show maps to use an initiator view return object instead of host view
